--- a/viz-a.ipynb
+++ b/viz-a.ipynb
@@ -428,6 +428,17 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "\n",
+    "NoteBook Insights:\n",
+    "\n",
+    "from the previous graphas the total accedents increases with the increase of speed,\n",
+    "and the speed increse with the increase of the alcohol quantity ."
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
